WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284500
Thread safety assertion failure in Observables code
https://bugs.webkit.org/show_bug.cgi?id=284500
Summary
Thread safety assertion failure in Observables code
Marais Rossouw
Reported
2024-12-11 18:06:41 PST
Much like what is being discussed here (
https://bugs.webkit.org/show_bug.cgi?id=284391
), we should keep our visitors thread safe.
Attachments
Add attachment
proposed patch, testcase, etc.
Marais Rossouw
Comment 1
2024-12-11 18:50:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37812
EWS
Comment 2
2024-12-12 02:41:28 PST
Committed
287733@main
(af27e9ed9ef2): <
https://commits.webkit.org/287733@main
> Reviewed commits have been landed. Closing PR #37812 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-12-12 02:42:13 PST
<
rdar://problem/141348396
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug