Thread safety in Observables visitAdditionalChildren methods https://bugs.webkit.org/show_bug.cgi?id=284500

Reviewed by Ryosuke Niwa and Chris Dumez.

visitAdditionalChildren should not ref/deref objects that are
single-threaded ref counted since this function gets called
concurrently to the main thread.

* Source/WebCore/dom/InternalObserverDrop.cpp:
* Source/WebCore/dom/InternalObserverEvery.cpp:
* Source/WebCore/dom/InternalObserverFilter.cpp:
* Source/WebCore/dom/InternalObserverFind.cpp:
* Source/WebCore/dom/InternalObserverFirst.cpp:
* Source/WebCore/dom/InternalObserverForEach.cpp:
* Source/WebCore/dom/InternalObserverInspect.cpp:
* Source/WebCore/dom/InternalObserverLast.cpp:
* Source/WebCore/dom/InternalObserverReduce.cpp:
* Source/WebCore/dom/InternalObserverSome.cpp:
* Source/WebCore/dom/InternalObserverTake.cpp:

Canonical link: https://commits.webkit.org/287733@main