Source/WebCore/dom/InternalObserverForEach.cpp
@@ -88,7 +88,7 @@ private:
 
     void visitAdditionalChildren(JSC::AbstractSlotVisitor& visitor) const final
     {
-        protectedCallback()->visitJSFunction(visitor);
+        m_callback->visitJSFunction(visitor);
     }
 
     Ref<DeferredPromise> protectedPromise() const { return m_promise; }
@@ -103,9 +103,9 @@ private:
     }
 
     uint64_t m_idx { 0 };
-    Ref<VisitorCallback> m_callback;
-    Ref<AbortSignal> m_signal;
-    Ref<DeferredPromise> m_promise;
+    const Ref<VisitorCallback> m_callback;
+    const Ref<AbortSignal> m_signal;
+    const Ref<DeferredPromise> m_promise;
 };
 
 void createInternalObserverOperatorForEach(ScriptExecutionContext& context, Observable& observable, Ref<VisitorCallback>&& callback, const SubscribeOptions& options, Ref<DeferredPromise>&& promise)
